--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -43,7 +43,7 @@
   }
 
   .port-item {
-    width: 30%;
+    width: 25%;
     transition: 0.3s ease opacity;
     border-bottom: 5px solid transparent;
     .fa {
